# pg_parcel

./: .gitignore  Brewfile  Cargo.toml  README.md  release.sh
.github/: pull_request_template.md  tap-release.yml
.github/workflows/: build.yml  release.yml
screenshots/: demo.yml
src/: inputfile.rs  main.rs  slicefile.rs  sql_string.rs
