[package]
authors = ["Jacob Elder"]
categories = ["command-line-utilities"]
description = "Dump horizontal slices from PostgreSQL schemas. Like if pg_dump had a --where option."
edition = "2021"
exclude = ["screenshots", ".vscode", "release.sh", "Brewfile", ".github"]
keywords = ["postgresql"]
license = "MIT OR Apache-2.0"
name = "pg_parcel"
repository = "https://github.com/Blissfully/pg_parcel"
version = "0.4.4"

[dependencies]
clap = { version = "3.1.5", features = ["derive", "wrap_help"] }
indicatif = "0.17.0"
itertools = "0.10.3"
lazy_static = "1.4.0"
postgres = { version = "0.19.4", features = ["array-impls"] }
rustls = { version = "0.20.7", features = ["dangerous_configuration"] }
tokio-postgres-rustls = "0.9.0"
regex = "1"
serde = "1.0"
serde_derive = "1.0.136"
toml = "0.5.8"
webpki = "0.22.0"
suggest = "0.4.0"
