[package]
authors = ["Jacob Elder"]
categories = ["database", "command-line-utilities"]
description = "A very minimal subset of `pg_dump --data-only` with multi-tenancy in mind."
edition = "2021"
exclude = ["screenshots", ".vscode", "release.sh", "Brewfile", ".github"]
keywords = ["postgresql"]
license = "MIT OR Apache-2.0"
name = "pg_parcel"
repository = "https://github.com/vendrinc/pg_parcel"
version = "1.0.0"

[dependencies]
clap = { version = "4.1.8", features = ["derive", "wrap_help"] }
indicatif = "0.17.0"
itertools = "0.10.3"
lazy_static = "1.4.0"
postgres = { version = "0.19.4", features = ["array-impls"] }
rustls = { version = "0.20.7", features = ["dangerous_configuration"] }
tokio-postgres-rustls = "0.9.0"
regex = "1"
serde = "1.0"
serde_derive = "1.0.136"
toml = "0.7.3"
webpki = "0.22.0"
suggest = "0.4.0"
sqlx = { version = "0.6.2", features = [
  "postgres",
  "uuid",
  "macros",
  "chrono",
  "decimal",
  "bigdecimal",
  "ipnetwork",
  "json",
  "tls",
  "runtime-tokio-rustls",
] }
tokio = { version = "1.23.0", features = ["full"] }
